[package]
name = "ddns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = "1.2.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1" # 错误处理
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] } # HTTP 客户端